# InterviewMind

./: .gitignore  AGENTS.md  DIFY.md  LICENSE  README.md  docker-compose.yml  env_example  面必过chatbot.yml
backend/: .dockerignore  Dockerfile  alembic.ini  boss_service.py  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/deepeval_tests/: conftest.py  test_interview_planner.py  test_rag_retrieval_quality.py
backend/evaluation/: __init__.py  conftest.py  test_agentic_retrieval_quality.py  test_interview_planner.py  test_rag_retrieval_quality.py  test_regression.py  test_resume_optimizer.py  test_workflow_correctness.py
backend/langfuse/: __init__.py  datasets.py  evaluation_reporting.py
backend/observability/: __init__.py  datasets.py  evaluation_reporting.py
backend/scripts/: run-worker.sh
backend/tests/: eval_config.yaml  manual_test.sh  route_source_helpers.py  test_agent_memory_retention.py  test_agent_run_event_stream_contract.py  test_agent_run_executors.py  test_agent_run_lifecycle_policy.py  test_agent_run_outbox.py  test_agent_run_relationships.py  test_agent_run_retry_policy.py  test_agent_runs.py  test_agent_runtime_registry.py  test_agentic_retrieval.py  test_api_integration.py  test_api_repository_allowlist.py  test_applications_application_layer.py  test_architecture_boundaries.py  test_boss_automation.py  test_boss_graph.py  test_boss_host_service.py  test_candidate_materials.py  test_chat_reports_application_layer.py  test_chat_session_actions_application_layer.py  test_chat_start_application_layer.py  test_chat_stream_application_layer.py  test_chat_stream_plan.py  test_checkpoint_fact_policy.py  test_checkpoint_lifecycle.py  test_config_validation.py  test_confirmation_service.py  test_context_assembler.py  test_deepeval_langfuse_reporting_hook.py  test_error_classification.py  test_greeting_generator.py  test_history_interfaces.py  (+51 more)
(+755 files in other folders)
