[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "AI interview backend service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "langgraph-checkpoint-postgres>=2.0.0",
    "mem0ai>=0.1.0",
    "openai>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "pgvector>=0.4.2",
    "greenlet>=3.5.1",
]

[project.optional-dependencies]
eval = [
    "deepeval>=2.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false
